# Loyalfier

./: LICENSE  README.md  package.json  pnpm-lock.yaml
libloyalfier/: Cargo.toml
libloyalfier/src/: lib.rs
libloyalfier/src/func/: arranger.rs  img.rs  mod.rs
libloyalfier/src/tests/: arranger.rs
loyalfier_test/: Cargo.toml  README
loyalfier_test/src/: main.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/func/: arranger.rs  calc.rs  img.rs  mod.rs
src-tauri/src/tests/: arranger.rs  mod.rs
